--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@
 
 <body class="h-100 gambiarra">
     <section class="h-100 row">
-        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro">
+        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
                     <img src="assets/img/awe-logo.svg" alt="">
@@ -61,42 +61,64 @@
                 </div>
             </div>
         </div>
-        <div class="col-10">
-            <div class="container">
-                <div class="row">
-                    <div class='d-flex flex-column gap-5'>
-                        <div class='d-flex flex-column border-bottom'>
-                            <p class='fs-5 pb-1'>Perfil</p>
-                            <h3>Perfil do atleta</h3>
+        <div class="col-10 mt-2">
+            <div class="container padeiro">
+                <div class='d-flex flex-column gap-5'>
+                    <div class='d-flex flex-column border-bottom'>
+                        <p class='fs-6 pb-2'>Perfil</p>
+                        <h5 class='fw-bold'>Perfil do atleta</h5>
+                    </div>
+                    <div class="row gap-3">
+                        <div id="perfil-esquerda" class='col-2 d-flex flex-column gap-4'>
+                            <div id='Jr' class='card p-1'>
+                                <img class="card-img-top align-self-center pb-2 pt-4" src="assets/img/Ellipse 8.svg">
+                                <div class="card-body">
+                                    <p class="card-text text-center fw-bold">Jr Programador da Silva</p>
+                                </div>
+                            </div>
+                            <div id='botoes-perfil' class='d-flex flex-column gap-2'>
+                                <button type="button"
+                                    class='w-100 btn btn-primary d-flex align-items-center justify-content-center gap-1  fw-bold p-2'>
+                                    <img src="assets/img/lapis.svg" alt="">
+                                    Editar perfil
+                                </button>
+                                <button id='alterar' type="button"
+                                    class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-6 fw-bold p-2'>
+                                    <img src="assets/img/cadeado.svg" alt="">
+                                    Alterar senha
+                                </button>
+                                <button id='excluir' type="button"
+                                    class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-6 fw-bold p-2'>
+                                    <img src="assets/img/lixo.svg" alt="">
+                                    Excluir senha
+                                </button>
+                            </div>
                         </div>
-                        <div>
-                            <div id="perfil-esquerda" class='d-flex flex-column gap-4'>
-                                <div id='Jr' class='card p-1 mt-2'>
-                                    <img class="card-img-top align-self-center pb-2 pt-4" src="assets/img/Ellipse 8.svg">
-                                    <div class="card-body">
-                                        <h4 class="card-text text-center">Jr Programador da Silva</h4>
-                                    </div>
-                                </div>
-                                <div id='botoes-perfil' class='d-flex flex-column gap-2'>
-                                    <button type="button"
-                                        class='w-100 btn btn-primary d-flex align-items-center justify-content-center gap-1 fs-4 fw-bold p-2'>
-                                        <img src="assets/img/icon.svg" alt="">
-                                        Editar perfil
-                                    </button>
-                                    <button id='alterar' type="button"
-                                        class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-4 fw-bold p-2'>
-                                        <img src="assets/img/cadeado.svg" alt="">
-                                        Alterar senha
-                                    </button>
-                                    <button id='excluir' type="button"
-                                        class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-4 fw-bold p-2'>
-                                        <img src="assets/img/lixo.svg" alt="">
-                                        Excluir senha
-                                    </button>
-                                </div>
-                            </div>
-                            <div>
-                            </div>
+                        <ul class='col-7 list-group d-flex flex-column'>
+                            <li class='list-group-item d-flex justify-content-between pt-3 pb-3 border-bottom'>
+                                <p class='fw-bold'>CPF</p>
+                                <p class='w-50'>123.456.789-10</p>
+                            </li>
+                            <li class='list-group-item d-flex justify-content-between pt-3 pb-3 border-top border-bottom'>
+                                <p class='fw-bold'>E-mail</p>
+                                <p class='w-50'>jrprogramador@gmail.com</p>
+                            </li>
+                            <li class='list-group-item d-flex justify-content-between pt-3 pb-3 border-top border-bottom'>
+                                <p class='fw-bold'>Nascimento</p>
+                                <p class='w-50'>11/09/2003</p>
+                            </li>
+                            <li class='list-group-item d-flex justify-content-between pt-3 pb-3 border-top border-bottom'>
+                                <p class='fw-bold'>Gênero</p>
+                                <p class='w-50'>Gênero</p>
+                            </li>
+                            <li class='list-group-item d-flex justify-content-between pt-3 pb-3 border-top border-bottom'>
+                                <p class='fw-bold'>UF</p>
+                                <p class='w-50'>Rio Grande do Norte (RN)</p>
+                            </li>
+                            <li class='list-group-item d-flex justify-content-between pt-3 pb-3 border-top'>
+                                <p class='fw-bold'>Cidade</p>
+                                <p class='w-50'>Natal</p>
+                            </li>
                         </div>
                     </div>
                 </div>
