--- a/index2.html
+++ b/index2.html
@@ -18,22 +18,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap"
         rel="stylesheet">
 
     <!-- css do projeto -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    
 </head>
 
 <body class="h-100 gambiarra">
     <section class="h-100 row">
-        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro">
-<body class="h-100">
-    <section class="h-100">
         <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
@@ -64,42 +63,77 @@
                 </div>
             </div>
         </div>
-        <div class="col-10">
-            <div class="container">
-                <div class="row">
-                    <div class='d-flex flex-column gap-5'>
-                        <div class='d-flex flex-column border-bottom'>
-                            <p class='fs-5 pb-1'>Perfil</p>
-                            <h3>Edição de perfil</h3>
+        <div class="col-10 mt-2">
+            <div class="container padeiro">
+                <div class='d-flex flex-column gap-5'>
+                    <div class='d-flex flex-column border-bottom'>
+                        <p class='fs-6 pb-2'>Perfil</p>
+                        <h5 class='fw-bold-600'>Edição de perfil</h5>
+                    </div>
+                    <div class="row gap-3">
+                        <div id="perfil-esquerda" class='col-2 d-flex flex-column gap-4'>
+                            <div id='Jr' class='card p-1 border-color'>
+                                <img class="card-img-top align-self-center pb-2 pt-4" src="assets/img/Group 53761.png">
+                                <div class="card-body">
+                                    <p class="card-text text-center fw-bold-600">Jr Programador da Silva</p>
+                                </div>
+                            </div>
+                            <div id='botoes-perfil' class='d-flex flex-column gap-2'>
+                                <button id="button" type="button"
+                                    class='w-100 btn btn-primary d-flex align-items-center justify-content-center gap-1  fw-bold-600 p-2'>
+                                    <img src="assets/img/lapis.svg" alt="">
+                                    Editar perfil
+                                </button>
+                                <button id='alterar' type="button"
+                                    class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-6 fw-bold-600 p-2'>
+                                    <img src="assets/img/cadeado.svg" alt="">
+                                    Alterar senha
+                                </button>
+                                <button id='excluir' type="button"
+                                    class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-6 fw-bold-600 p-2'>
+                                    <img src="assets/img/lixo.svg" alt="">
+                                    Excluir senha
+                                </button>
+                            </div>
                         </div>
-                        <div>
-                            <div id="perfil-esquerda" class='d-flex flex-column gap-4'>
-                                <div id='Jr' class='card p-1 mt-2'>
-                                    <img class="card-img-top align-self-center pb-2 pt-4" src="assets/img/Ellipse 8.svg">
-                                    <div class="card-body">
-                                        <h4 class="card-text text-center">Jr Programador da Silva</h4>
+                        <div class="col-7 card border-color"> 
+                            <form class="p-3 py-4 d-flex flex-column gap-4">
+                                <div class="d-flex gap-3">
+                                    <div class="col-4">
+                                        <label name='CPF' class="pb-1 fw-bold-600">CPF</label>
+                                        <input class="border-color bg-body-color w-100" placeholder="###.###.###-##" type="text" id="cpf">
+                                    </div>
+                                    <div class="col-7">
+                                        <label name='email' class="pb-1 fw-bold-600">E-mail</label>
+                                        <input class="border-color bg-body-color w-100" placeholder="jrprogramador@gmail.com" type="text" id="email">
                                     </div>
                                 </div>
-                                <div id='botoes-perfil' class='d-flex flex-column gap-2'>
-                                    <button type="button"
-                                        class='w-100 btn btn-primary d-flex align-items-center justify-content-center gap-1 fs-4 fw-bold p-2'>
-                                        <img src="assets/img/icon.svg" alt="">
-                                        Editar perfil
-                                    </button>
-                                    <button id='alterar' type="button"
-                                        class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-4 fw-bold p-2'>
-                                        <img src="assets/img/cadeado.svg" alt="">
-                                        Alterar senha
-                                    </button>
-                                    <button id='excluir' type="button"
-                                        class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-4 fw-bold p-2'>
-                                        <img src="assets/img/lixo.svg" alt="">
-                                        Excluir senha
-                                    </button>
+                                <div class="col-7">
+                                    <label name='Nome' class="pb-1 fw-bold-600">Nome</label>
+                                    <input class="w-100 border-color" value="jrprogramador@gmail.com" type="text" id="Nome">
                                 </div>
-                            </div>
-                            <div>
-                            </div>
+                                <div class="col-4">
+                                    <label name='Nascimento' class="pb-1 fw-bold-600">Nascimento</label>
+                                        <input class=" border-color w-100" type="date" id="Nascimento" name="date">
+
+                                </div>
+                                
+                                <div class="d-flex flex-column col-4">
+                                    <label name='Genero' class="pb-1 fw-bold-600">Gênero</label>
+
+                                    <select class="seta p-10 rounded border-color" name="genero" id="genero">
+                                        <option value="Masculino" >Masculino</option>
+                                    </select>
+                                </div>
+                                <div class="w-auto">
+                                    <label name='UF' class="pb-1 fw-bold-600">UF</label>
+                                    <input class="border-color  bg-body-color w-100" value="Unidade Federativa do Atleta" type="text" id="cpf">
+                                </div>
+                                <div class="col-7">
+                                    <label name='cidade' class="pb-1 fw-bold-600">Cidade</label>
+                                    <input class="w-100 border-color" value="Natal" type="text" id="Genero">
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
