--- a/index3.html
+++ b/index3.html
@@ -31,13 +31,13 @@
 
 <body class="h-100 gambiarra">
     <section class="h-100 row">
-        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
+        <div class=" options col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
                     <img src="assets/img/awe-logo.svg" alt="">
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
-                <div class="options d-flex flex-column gap-4">
+                <div class=" d-flex flex-column gap-4">
                     <div class="dashboard d-flex align-items-center gap-2">
                         <i class="bi bi-house-door hover"></i>
                         <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
@@ -119,7 +119,7 @@
                                 <p class='fw-bold'>Cidade</p>
                                 <p class='w-50'>Natal</p>
                             </li>
-                        </div>
+                        </ul>
                     </div>
                 </div>
             </div>
