--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@
 
 <body class="h-100 gambiarra">
     <section class="h-100 row">
-        <div class=" options col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
+        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
                     <img src="assets/img/awe-logo.svg" alt="">
