--- a/index4.html
+++ b/index4.html
@@ -29,8 +29,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="h-100">
-    <section class="h-100 d-flex">
+<body class="h-100 gambiarra">
+    <section class="h-100 row">
         <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
@@ -62,10 +62,10 @@
             </div>
         </div>
         <div class="col-10 mt-2">
-            <div id="cont-index-4" class="container justify-content-center d-flex">
-                <div class="row">
+            <div id="cont-index-4" class="container padeiro">
+                <div>
                     <div id="label" class="d-flex flex-column gap-3">
-                        <div class="d-flex gap-2 mt-3">
+                        <div class="d-flex gap-2">
                             <a id="home" class="link-underline link-underline-opacity-0" href="#">Perfil</a>
                             <img src="assets/img/icon.svg">
                             <p>Alterar Senha</p>
@@ -76,15 +76,15 @@
                         <p>Use o formulário a seguir para alterar a senha.</p>
                         <div>
                             <p>Senha atual:</p>
-                            <input id="input-t4" class="form-control" placeholder="Digite sua senha atual" type="text">
+                            <input id="input-t4" class="form-control w-50" placeholder="Digite sua senha atual" type="text">
                         </div>
                         <div>
                             <p>Nova senha:</p>
-                            <input id="input-t4" class="form-control" placeholder="Digite sua nova senha" type="text">
+                            <input id="input-t4" class="form-control w-50" placeholder="Digite sua nova senha" type="text">
                         </div>
                         <div>
                             <p>Repita a nova senha:</p>
-                            <input id="input-t4" class="form-control" placeholder="Reinsira sua nova senha" type="text">
+                            <input id="input-t4" class="form-control w-50" placeholder="Reinsira sua nova senha" type="text">
                         </div>
                     </form>
                     <button id="button" class="btn btn-primary mt-4">Salvar alterações</button>
