--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -61,6 +61,21 @@
                 </div>
             </div>
         </div>
+        <div class="container padeiro">
+            <div class="d-flex flex-column gap-3 mb-2">
+                <div class="d-flex gap-2">
+                    <a id="home" class="link-underline link-underline-opacity-0" href="#">Modalidades</a>
+                    <img src="assets/img/icon.svg">
+                    <p>Detalhamento da modalidade</p>
+                </div>
+                <div class='d-flex align-items-center justify-content-between border-bottom'>
+                    <h5 class='fw-bold'>Modalidades</h5>
+                    <button type='button' class='btn btn-outline-primary'>
+                        <img src="assets/img/x.svg" alt="">
+                        <p class='gerar'>Gerar Relatórios</p>
+                    </button>
+                </div>
+            </div>
     </section>
 </body>
 
