--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -30,8 +30,8 @@
 </head>
 
 <body class="h-100">
-    <section class="tudo h-100 d-flex gap-5">
-        <div class="me-5 col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
+    <section class="h-100 row">
+        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
                     <img src="assets/img/awe-logo.svg" alt="">
@@ -61,21 +61,29 @@
                 </div>
             </div>
         </div>
-        <div class="container padeiro">
-            <div class="d-flex flex-column gap-3 mb-2">
-                <div class="d-flex gap-2">
-                    <a id="home" class="link-underline link-underline-opacity-0" href="#">Modalidades</a>
-                    <img src="assets/img/icon.svg">
-                    <p>Detalhamento da modalidade</p>
-                </div>
-                <div class='d-flex align-items-center justify-content-between border-bottom'>
-                    <h5 class='fw-bold'>Modalidades</h5>
-                    <button type='button' class='btn btn-outline-primary'>
-                        <img src="assets/img/x.svg" alt="">
-                        <p class='gerar'>Gerar Relatórios</p>
-                    </button>
+        <div class="col-10 mt-2">
+            <div class="container padeiro">
+                <div class="d-flex flex-column gap-3 mb-2">
+                    <div class="d-flex gap-2">
+                        <a id="home" class="link-underline link-underline-opacity-0" href="#">Modalidades</a>
+                        <img src="assets/img/icon.svg">
+                        <p>Detalhamento da modalidade</p>
+                    </div>
+                    <div class='d-flex align-items-center justify-content-between border-bottom'>
+                        <h5 class='fw-bold'>Modalidades</h5>
+                        <div class='d-flex gap-3 mb-3'>
+                            <button type='button' class='btn btn-outline-primary d-flex align-items-center gap-2'>
+                                <img src="assets/img/x.svg" alt="">
+                                <p class='gerar'>Gerar Relatórios</p>
+                            </button>
+                            <button type="button" class='btn btn-primary'>
+                                Cadastrar Modalidade
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
     </section>
 </body>
 
