--- a/indexmodalides5.html
+++ b/indexmodalides5.html
@@ -30,7 +30,7 @@
 </head>
 
 <body class="h-100">
-    <section class="h-100 d-flex">
+    <section class="h-100 row">
         <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
